# lightsoff-api

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  pytest.ini  zappa_settings.template.json
.github/workflows/: zappa.yml
db-init-scripts/: add-test-database.sql
lightsoff-api/: __init__.py  commands.py
lightsoff_api/: __init__.py  commands.py
migrations/versions/: 3c43978440d2_add_latitude_longitude_properties_to_.py  41bf75c9dfe7_add_placereview_model.py  7d40282fa7e0_add_contacted_count_property_on_place.py  bc44630705da_initial_database_migration.py  c1fa4ca3c33f_add_report_count_to_place.py  e6c76ef765af_change_google_place_id_column_type.py
tests/: conftest.py
tests/routes/: test_place_reviews.py  test_places.py
