[tool.poetry]
name = "lightsoff-api"
version = "0.3.0"
description = "The API used by lightsoff website"
authors = ["Alexandre Papin <alexandre.papin@indaclouds.fr>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"

Flask = "2.2.2"
Flask-Migrate = "3.1.0"
flask-openapi3 = "2.1.1"
flask-sqlalchemy = "3.0.2"
zappa = "0.55.0"
psycopg2-binary = "2.9.5"
Flask-Cors = "3.0.10"

[tool.poetry.dev-dependencies]
black = "22.10.0"
pytest = "7.1.3"
python-dotenv = "0.21.0"
pytest-env = "0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
