[tool.poetry]
name = "lightsoff-api"
version = "0.6.1"
description = "The API used by lightsoff website"
authors = ["Alexandre Papin <alexandre.papin@indaclouds.fr>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"

Flask = "2.2.3"
Flask-Migrate = "4.0.4"
flask-openapi3 = "2.3.1"
flask-sqlalchemy = "3.0.3"
zappa = "0.56.1"
psycopg2-binary = "2.9.5"
Flask-Cors = "3.0.10"
requests = "2.28.2"

[tool.poetry.dev-dependencies]
black = "23.1.0"
pytest = "7.2.2"
python-dotenv = "1.0.0"
pytest-env = "0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
